# LeaseWise-Frontend

./: .gitignore  .replit  MANIFEST.in  Pasted--UndefinedError-jinja2-exceptions-UndefinedError-PLANS-is-undefined-Traceback-most-recent-c-1731110058536.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-create-u-1731167120689.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-terms-of-servi-1731357575994.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-components-select-plan-select-plan-html-Tra-1731415219468.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-components-terms-of-service-terms-of-service-h-1731357552548.txt  Pasted-Terms-of-Service-Last-Updated-Insert-Date-1-Acceptance-of-Terms-Welcome-to-Lease-Check-By-acce-1729779008641.txt  Pasted-TypeError-TypeError-Object-of-type-Undefined-is-not-JSON-serializable-Traceback-most-recent-ca-1731167218657.txt  README.md  Terms-of-Service-Last-Updated.txt  create_github_repo.py  credentials.json  google_drive_upload.py  leasecheck.code-workspace  main.py  pyproject.toml  replit.nix  setup.py
docs/: screen_components.md
leasecheck/: __init__.py  app.py  cache.py  database.py  document_processor.py  forms.py  models.py  routes.py
leasecheck/components/: base_component.html
leasecheck/templates/: _terms_content.html  account_setup.html  base.html  checkout.html  disclaimer.html  documents.html  index.html  invoice.html  lease_details.html  lease_upload.html  legal_stuff.html  onboarding_screen.html  payment_status.html  preview.html  processing_status.html  refund_policy.html  risk_report.html  screen.html  select_plan.html  splash_screen.html  terms_declined.html  (+2 more)
repl_nix_reactfrontendbuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: account_setup.html  base.html  legal_stuff.html  onboarding_screen.html  screen.html  select_plan.html  splash_screen.html  terms_of_service.html  welcome_screen.html
tests/: conftest.py  test_onboarding_flow.py
welcome_screen/: welcome_screen.css  welcome_screen.html
(+116 files in other folders)
