[project]
name = "repl-nix-reactfrontendbuilder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "repl-nix-reactfrontendbuilder",
    "google-api-python-client>=2.151.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "flask-mail>=0.10.0",
]

[tool.uv.sources]
repl-nix-reactfrontendbuilder = { workspace = true }
