[project]
name = "repl-nix-reactfrontendbuilder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "repl-nix-reactfrontendbuilder",
    "google-api-python-client>=2.151.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "flask-wtf==1.2.1",
    "wtforms>=3.2.1",
    "flask-mail>=0.10.0",
    "pdfkit>=1.0.0",
    "weasyprint>=63.0",
    "stripe==7.8.1",
    "flask-talisman>=1.1.0",
    "sqlalchemy==2.0.23",
    "reportlab>=4.2.5",
    "pillow>=10.4.0",
]

[tool.uv.sources]
repl-nix-reactfrontendbuilder = { workspace = true }
